[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A maze generator module"
authors = [{name = "Aya", email = "ayamouate@gmail.com"}
           {name = "Youssra", email = ""}]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]